# zenforge

./: CONTRIBUTING.md  TODO.md  package-lock.json  package.json  vite.config.ts
common/: control.gpc  fgc.gpc  helper.gpc  scroll.gpc
messages/: en.json  pt-br.json
modules/: antirecoil.toml  antirecoil_decay.toml  antirecoil_timeline.toml  bunnyhop.toml  keyboard.toml  leanspam.toml  plinkdash.toml  rapidfire.toml
scripts/: bump-version.md  bump-version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  flow.rs
src-tauri/src/models/: config.rs  flow.rs  game_meta.rs
src-tauri/src/pipeline/: build.rs  newgame.rs
src/lib/components/editor/: FileTreePanel.svelte  FlowDefaultsPanel.svelte  FlowPersistencePanel.svelte  GameOverviewPanel.svelte  MenuLayoutBuilder.svelte
src/lib/components/inputs/: VariableSelect.svelte
src/lib/components/layout/: AppLogo.svelte  Sidebar.svelte  TitleBar.svelte
src/lib/components/persistence/: PersistencePanel.svelte
src/lib/flow/: auto-link.ts  chunks.ts  codegen-gameplay.ts  codegen-merged.ts  codegen.ts  emulator.ts  layout.ts  migration.ts  module-nodes.ts  oled-preview.ts
src/lib/flow/subnodes/: registry.ts
src/lib/stores/: combo-transfer.svelte.ts  flow-transfer.svelte.ts  flow.svelte.ts
src/lib/tauri/: commands.ts
src/lib/types/: config.ts  flow.ts
src/lib/utils/: recoil-parser.ts  zmk-parser.ts
src/routes/: +page.svelte  layout.css
src/routes/tools/builds/: +page.svelte
src/routes/tools/combo/: +page.svelte  export.ts  (+1 more)
(+29 files in other folders)
