[package]
name = "zen-forge"
version = "1.0.0"
description = "Zen Forge - Desktop IDE for Cronus Zen game scripts"
authors = ["masshiro"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zen_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
toml = "0.8"
toml_edit = "0.22"
walkdir = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "time", "net"] }
notify = "7"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
ersa_lsp_core = { path = "../../ersa-lsp-core" }

[dev-dependencies]
tempfile = "3"
